--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,600;1,700&family=Noto+Sans+Khmer:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:ital,wght@0,300;1,300;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,600;1,700&family=Noto+Sans+Khmer:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700&family=Poppins:wght@200;300;400;500;600;700;800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Ubuntu:ital,wght@0,300;1,300;1,400&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -20,124 +20,15 @@
   select:-webkit-autofill:hover,
   select:-webkit-autofill:focus {
     border: inherit inherit inherit;
-    -webkit-text-fill-color: #64748b;
+    -webkit-text-fill-color: #ffffff;
     color: inherit;
     -webkit-box-shadow: 0 0 0px 1000px inherit inset;
     transition: background-color 5000s ease-in-out 0s;
   }
 
-  .TabsLinks {
-    @apply flex lg:justify-center items-center space-x-1 min-w-[5rem] hover:text-blue-600 text-[0.7rem] outline-none focus:outline-none font-sans dark:font-semibold font-bold uppercase tracking-wider overflow-hidden transition-colors duration-200;
-  }
-  .navlinks.active {
-    @apply text-blue-600 border-blue-600 lg:border-b-2 font-bold;
-  }
-  .supportlinks.active {
-    @apply border-t-2 border-blue-600;
-  }
-  .settingsNav {
-    @apply dark:text-slate-400 text-slate-700 text-sm font-medium flex items-center space-x-1 hover:text-blue-500 dark:hover:text-blue-500 outline-none focus:outline-none;
-  }
-
-  .settingsNav.active {
-    @apply text-blue-600;
-  }
-  .sidenav .active {
-    @apply text-blue-500;
-  }
-
-  /*Connect Channels Styles ================================*/
-  .connect_btn {
-    @apply min-h-[4rem] col-span-1 rounded bg-slate-100 dark:bg-[#33415569] border border-slate-300 dark:border-slate-700 flex flex-col justify-center items-center gap-2 outline-none focus:outline-none focus:border-0 focus:ring-[1px] focus:ring-blue-600 hover:opacity-90 dark:hover:opacity-80 hover:shadow-lg hover:border-blue-600 dark:hover:border-blue-600 transition-all relative;
-  }
-
-  #connectModal,
-  #newCannedResponse,
-  #actionPanel,.ticketDetails {
-    box-shadow: 0 0 0 9999999px rgba(0, 0, 0, 0.4);
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms;
-  }
-  /*End of Connect Channels Styles ================================*/
-
-  #Profile_Details:hover .hoverProfile_Details {
-    display: flex;
-  }
-
-  /*Custom Height  =====================================*/
-  .h_Custom {
-    height: calc(100vh - 4.5rem);
-  }
-
-  /* Audio/ Recording player styling =====================================*/
-  audio::-webkit-media-controls-panel {
-    @apply dark:bg-slate-500 bg-slate-200;
-  }
-
-  .delayDisplay {
-    opacity: 0;
-    transtion: opacity 0.2s;
-    animation: animated linear 0.2s forwards;
-    animation-delay: 0.3s;
-  }
-
-  @keyframes animated {
-    from {
-      opacity: 0;
-      transform: scale(0);
-    }
-    to {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
-
-  /** chat Images And Styling===========================================================*/
-  .messageContainer * img,
-  .messageContainer img {
-    @apply !inline-block m-1 h-[3.5rem] w-[3.5rem] rounded-lg mx-1 object-center object-cover z-[99] cursor-zoom-in  hover:brightness-50 transition-all duration-150 border border-slate-500;
-  }
-
-  .messageContainer p a,
-  .messageContainer a,
-  .messageContainer p span a {
-    @apply text-blue-600 italic;
-  }
-  .messageContainer p a,
-  .messageContainer a,
-  .messageContainer p span a {
-    color: #2563eb !important;
-  }
-
-  .messageContainer p span,
-  .messageContainer p *,
-  .messageContainer * {
-    background: inherit !important;
-    color: inherit !important;
-    font-size: 0.78rem !important;
-  }
-
-  .messageContainer ul,
-  .template ul {
-    @apply list-disc pl-6;
-  }
-  .messageContainer ol,
-  .template ol {
-    @apply list-decimal pl-6;
-  }
-
-  .messageContainer h1,
-  .template h1 {
-    @apply text-sm font-bold;
-  }
-  .messageContainer h2,
-  .template h2 {
-    @apply text-sm font-bold;
-  }
-  .messageContainer h3,
-  .template h3 {
-    @apply text-sm font-bold;
+  .navLinks {
+    @apply flex items-center justify-center space-x-1 text-xs text-slate-700 font-medium
+           h-full w-full col-span-1 border-r border-r-slate-200;
   }
 
   /* Zoom Range Control Styles =======================*/
@@ -337,11 +228,12 @@
   html,
   *,
   body {
-    @apply font-sans;
+    @apply selection:bg-cyan-750 selection:text-white;
   }
 
   body {
-    font-family: 'Poppins', sans-serif !important;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
     scroll-behavior: smooth;
   }
 
@@ -408,19 +300,17 @@
       transform: translateY(300%);
     }
   }
-/* fieldset Styles ==============*/
-fieldset
-{
+  /* fieldset Styles ==============*/
+  fieldset {
     min-width: 0;
     text-overflow: ellipsis;
-    max-width:100%;
-}
-legend
-{
+    max-width: 100%;
+  }
+  legend {
     min-width: 0;
     max-width: 100%;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-}
+  }
 }
