--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -31,6 +31,10 @@
            h-full w-full col-span-1 border-r border-r-slate-200;
   }
 
+  .inventory_input {
+    @apply w-full h-12 rounded border-2 border-slate-300  focus:outline-none focus:border-cyan-750 focus:ring-0 text-xs text-slate-600 placeholder:text-slate-400;
+  }
+
   /* Zoom Range Control Styles =======================*/
   /*Range Reset*/
   .zoomRange {
@@ -98,31 +102,7 @@
     outline: 3px solid #2563eb;
     outline-offset: 0.125rem;
   }
-
   /* End Of Zoom Range Control Styles =======================*/
-
-  /** Canned Response List ==================*/
-  .cannedResponseList:hover button {
-    @apply flex;
-  }
-
-  /* Contacts Tooltip ===================================*/
-  .contact_Tooltip {
-    @apply flex flex-col items-center min-w-[12rem] min-h-[5rem] p-4 dark:bg-slate-800 bg-slate-100 border dark:border-slate-600 border-slate-300 shadow-2xl rounded transition-all duration-500 text-sm text-slate-800 dark:text-slate-300 overflow-hidden z-[9999] tracking-tight;
-  }
-
-  /*  New Contacts & User Input Customization ========== */
-  .contact_input {
-    @apply w-full h-full bg-inherit border-b-2 border-0 dark:border-slate-600 border-slate-200 outline-none focus:outline-none text-xs px-4 focus:ring-0 placeholder:text-slate-500 text-slate-700 dark:text-slate-300;
-  }
-  .newuser_input {
-    @apply w-full h-full bg-slate-100 dark:bg-slate-800 border-b-2 border-0 dark:border-slate-600 border-slate-300 outline-none focus:outline-none text-xs px-4 focus:ring-0 placeholder:text-slate-500 text-slate-700 dark:text-slate-300;
-  }
-
-  /*Contact Tooltip options ==================================*/
-  .contact_Option {
-    @apply h-10 w-10 rounded hover:border hover:border-blue-600 hover:text-blue-600 dark:hover:border-blue-600 dark:hover:text-blue-600 transition-all flex justify-center items-center text-slate-800 dark:text-slate-400 cursor-pointer relative;
-  }
 
   /* Reports No data Preloader ======================*/
   .preloader {
@@ -165,33 +145,6 @@
     }
   }
 
-  /* SetUp New Account Loading Bar ===========================*/
-  #setUpLoading {
-    animation: loading linear 1s infinite alternate;
-  }
-
-  @keyframes loading {
-    from {
-      left: -50%;
-    }
-    to {
-      left: 100%;
-    }
-  }
-
-  /**HIde Date picker*/
-  .DueDatePicker {
-    display: none !important;
-  }
-
-  /*Tool Tip Bottom Cal*/
-  .tooltip_bottom {
-    bottom: -webkit-calc(
-      100% - 10px
-    ); /*may require prefix for old browser support*/
-    bottom: calc(100% - 10px); /*i.e. half the height*/
-  }
-
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
@@ -216,10 +169,6 @@
     @apply dark:bg-slate-700 bg-slate-400 rounded-[1vh];
   }
 
-  .custom-shadow {
-    box-shadow: 0px 1px 0px rgba(0, 0, 0.68, 0.2);
-  }
-
   /* Handle on hover */
   html::-webkit-scrollbar-thumb:hover {
     @apply bg-[#555];
@@ -235,6 +184,8 @@
     font-family: "Poppins", sans-serif;
     font-style: normal;
     scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
   }
 
   html,
