--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,600;1,700&family=Noto+Sans+Khmer:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700&family=Poppins:wght@200;300;400;500;600;700;800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Ubuntu:ital,wght@0,300;1,300;1,400&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -187,12 +185,10 @@
   html,
   *,
   body {
-    @apply selection:bg-cyan-750 selection:text-white;
+    @apply selection:bg-cyan-750 selection:text-white font-sans;
   }
 
   body {
-    font-family: "Poppins", sans-serif;
-    font-style: normal;
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
