--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -33,12 +33,13 @@
   }
 
   .portal_cards {
-    @apply col-span-1 h-[10rem] rounded border border-cyan-900/30 hover:border-cyan-750 hover:drop-shadow-lg transition-all duration-150 bg-cyan-50/60 overflow-hidden;
+    @apply col-span-1 h-[10rem] rounded border border-cyan-900/30 hover:border-cyan-750 hover:drop-shadow-lg transition-all
+     duration-150 bg-cyan-50/60 overflow-hidden;
   }
 
   .navLinks {
-    @apply flex items-center justify-center space-x-1 text-xs text-slate-800 font-medium
-           h-full w-full col-span-1 border-r border-r-slate-200;
+    @apply flex items-center justify-center space-x-1 text-xs text-slate-800 font-semibold
+           h-full w-full col-span-1 border-r border-r-slate-200 focus:outline-none;
   }
 
   .inventory_input {
